# obsidian-speakeasy

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  esbuild.config.mjs  eslint.config.mts  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  vitest.config.ts
.github/workflows/: lint.yml  release.yml
__mocks__/: obsidian.ts
backend/: .env.example  README.md  diarize.py  main.py  merge.py  pyproject.toml  requirements.txt  transcribe.py
backend/tests/: test_e2e.py  test_merge.py
backend/tests/fixtures/: gen_test_wav.py
specs/: product-requirements-document.md  roadmap.md  technical-requirements-document.md
src/: main.ts  settings.ts  types.ts
src/audio/: converter.ts  recorder.ts
src/commands/: index.ts  record.ts
src/templates/: annotator.ts  index.ts  loader.ts  parser.ts
src/templates/defaults/: brainstorm-workshop.md  decision-log.md  learning-insight.md  meeting-notes.md  one-on-one.md  research-interview.md  stakeholder-communication.md
src/ui/: status.ts  template-modal.ts
src/utils/: api.ts  note-writer.ts  ollama.ts
tests/: settings.test.ts
tests/audio/: converter.test.ts  recorder.test.ts
tests/templates/: annotator.test.ts  loader.test.ts  parser.test.ts
tests/utils/: api.test.ts  note-writer.test.ts  ollama.test.ts
